# synthorus

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  build_docs.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docs/: 0_00_exec_summary.md  1_01_exec_summary.md  1_01_front_matter.md  1_01_front_matter_template.md  1_02_front_matter.md  1_02_introduction.ipynb  1_03_installation.ipynb  1_03_introduction.ipynb  1_04_developer_community.ipynb  1_04_installation.ipynb  2_01_background.ipynb  2_02_workflow.ipynb  2_03_simulator.ipynb  2_04_datasource.ipynb  2_05_model_spec.ipynb  2_06_reports.ipynb  2_07_spec_file.ipynb  2_08_randomness.ipynb  LICENSE.txt  _config.yml  _toc.yml
docs/api/: modules.rst  synthorus.dataset.rst  synthorus.model.cross_table.rst  synthorus.model.rst  synthorus.noise.rst  synthorus.rst  synthorus.simulator.rst  synthorus.spec_file.rst  synthorus.utils.rst  synthorus.workflows.rst
src/synthorus/: error.py
src/synthorus_demos/: all_demos.py  example_config.py
tests/: all_coverage.py  all_coveragerc.txt  all_tests.py
tests/dataset/: math_dataset_test.py  pandas_dataset_test.py  table_builder_dataset_test.py
tests/helpers/: make_model_spec.py  redirect_out.py  tmp_dir.py  unittest_fixture.py
tests/model/: dataset_cache_test.py  make_model_index_test.py
tests/noise/: noise_test.py  row_sampler_test.py  safe_random_test.py
tests/simulator/: sim_recorder_test.py
tests/spec_file/: interpret_spec_file_test.py
tests/utils/: clean_inline_test.py  data_catcher_test.py  (+6 more)
(+142 files in other folders)
